# ClawMind

./: .env.example  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
deploy/: README.md
deploy/n8n/: README.md  daily-greeting.json  nightly-summary.json  weekly-system-check.json
deploy/openclaw/: agent_config.yaml  instruction.md  test.md
docker/: memory-api.Dockerfile
docs/: clawmind-system-design.md
examples/memory/users/user_001/: active_projects.md  preferences.md  profile.md  routines.md
examples/memory/users/user_001/logs/2026/03/: 2026-03-19.md
memory_api/: __init__.py  app.py  models.py  service.py
tests/: test_memory_service.py
