[project]
name = "clawmind-memory-api"
version = "0.1.0"
description = "Markdown-backed memory API implementation for ClawMind"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
